--- a/SoftwareUpdate/GUPdotNET/app.config
+++ b/SoftwareUpdate/GUPdotNET/app.config
@@ -47,6 +47,9 @@
       <setting name="UpdateLog" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="SettingsFileVersion" serializeAs="String">
+        <value>1.0</value>
+      </setting>
     </GUPdotNET.Properties.Settings>
   </applicationSettings>
 </configuration>
