--- a/SoftwareUpdate/GUPdotNET/app.config
+++ b/SoftwareUpdate/GUPdotNET/app.config
@@ -8,19 +8,6 @@
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
-  <appSettings>
-    <!--
-        When debug mode is true addition output is produced to help
-        trouble shoot issues or facilitate new development.
-    -->
-		<add key="DebugMode" value="true" />
-    <!-- 
-        The name of the program being supported it is used
-        to perform simple tasks like nameing the config file so
-        that it is unique to the support program.
-    -->    
-    <add key="UpdateProgramName" value="YahtzeeSharp" />
-  </appSettings>
   <applicationSettings>
     <GUPdotNET.Properties.Settings>
       <setting name="DebugMode" serializeAs="String">
@@ -33,7 +20,7 @@
         <value />
       </setting>
       <setting name="InstallerType" serializeAs="String">
-        <value />
+        <value>exe</value>
       </setting>
       <setting name="ProcessorType" serializeAs="String">
         <value>Any</value>
@@ -41,14 +28,17 @@
       <setting name="ProjectWebSite" serializeAs="String">
         <value>https://code.google.com/p/goontools/</value>
       </setting>
-      <setting name="ErrorLog" serializeAs="String">
+      <setting name="UseErrorLog" serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="UpdateLog" serializeAs="String">
+      <setting name="UseUpdateLog" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="SettingsFileVersion" serializeAs="String">
         <value>1.0</value>
+      </setting>
+      <setting name="UpdateProgramTitle" serializeAs="String">
+        <value />
       </setting>
     </GUPdotNET.Properties.Settings>
   </applicationSettings>
