--- a/SoftwareUpdate/GUPdotNET/Properties/Settings.settings
+++ b/SoftwareUpdate/GUPdotNET/Properties/Settings.settings
@@ -12,7 +12,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="InstallerType" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">exe</Value>
     </Setting>
     <Setting Name="ProcessorType" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Any</Value>
@@ -20,14 +20,17 @@
     <Setting Name="ProjectWebSite" Type="System.String" Scope="Application">
       <Value Profile="(Default)">https://code.google.com/p/goontools/</Value>
     </Setting>
-    <Setting Name="ErrorLog" Type="System.Boolean" Scope="Application">
+    <Setting Name="UseErrorLog" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="UpdateLog" Type="System.Boolean" Scope="Application">
+    <Setting Name="UseUpdateLog" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="SettingsFileVersion" Type="System.String" Scope="Application">
       <Value Profile="(Default)">1.0</Value>
+    </Setting>
+    <Setting Name="UpdateProgramTitle" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
