Updates merged back into trunk from YahtzeeSharp.

--- a/SoftwareUpdate/GUPdotNET/app.config
+++ b/SoftwareUpdate/GUPdotNET/app.config
@@ -16,7 +16,7 @@
       <setting name="UpdateFileName" serializeAs="String">
         <value />
       </setting>
-      <setting name="UpdatePackageURL" serializeAs="String">
+      <setting name="UpdatePackageURI" serializeAs="String">
         <value />
       </setting>
       <setting name="InstallerType" serializeAs="String">
