--- a/SoftwareUpdate/GUPdotNET/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/GUPdotNET.csproj
@@ -28,12 +28,13 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <PlatformTarget>x86</PlatformTarget>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+    <DefineConstants>DEBUG</DefineConstants>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>GUPdotNET.MainClass</StartupObject>
@@ -87,6 +88,9 @@
     <EmbeddedResource Include="Resources\Images\Install.png" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\ObjectTypes\InstallMethod.cs" />
+    <Compile Include="Data\ObjectTypes\ProcessorBit.cs" />
+    <Compile Include="Data\ObjectTypes\RunType.cs" />
     <Compile Include="gtk-gui\generated.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -106,7 +110,6 @@
     <Compile Include="gtk-gui\GUPdotNET.UI.Views.InstallView.cs" />
     <Compile Include="GlobalTools\GlobalTools.cs" />
     <Compile Include="UpdateCheck.cs" />
-    <Compile Include="GlobalTools\GlobalObjectTypes.cs" />
     <Compile Include="UI\Views\MainView.cs" />
     <Compile Include="gtk-gui\GUPdotNET.UI.Views.MainView.cs" />
     <Compile Include="IO\LocalSystemTools.cs" />
@@ -122,12 +125,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Content Include="docs\DeveloperGuide.html" />
-    <Content Include="docs\gpl_v3.txt" />
-    <Content Include="docs\templates\GUPProgramConfig.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="docs\templates\ReleaseNotes.html" />
+    <None Include="Docs\GUPdotNET_FlowChart.dia" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -136,7 +134,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="docs\templates\GUPPackageConfig.xml" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
@@ -194,6 +191,16 @@
       </Properties>
     </MonoDevelop>
   </ProjectExtensions>
+  <ItemGroup>
+    <Content Include="Docs\DeveloperGuide.html" />
+    <Content Include="Docs\License\gpl-3.0-standalone.html" />
+    <Content Include="Docs\License\gpl-3.0.txt" />
+    <Content Include="Docs\Templates\GUPPackageConfig.xml" />
+    <Content Include="Docs\Templates\ReleaseNotes.html" />
+  </ItemGroup>
   <ItemGroup />
-  <ItemGroup />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
