--- a/SoftwareUpdate/GUPdotNET/Properties/Settings.settings
+++ b/SoftwareUpdate/GUPdotNET/Properties/Settings.settings
@@ -8,7 +8,7 @@
     <Setting Name="UpdateFileName" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="UpdatePackageURL" Type="System.String" Scope="Application">
+    <Setting Name="UpdatePackageURI" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="InstallerType" Type="System.String" Scope="Application">
