--- a/BookmarkSharp/BookmarkSharp.DataAccess/BookmarkSharp.DataAccess.csproj
+++ b/BookmarkSharp/BookmarkSharp.DataAccess/BookmarkSharp.DataAccess.csproj
@@ -162,7 +162,9 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\BookmarkController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ResearchController.cs" />
     <Compile Include="CRUD\Create.cs" />
     <Compile Include="CRUD\Delete.cs" />
     <Compile Include="CRUD\Read.cs" />
@@ -176,6 +178,7 @@
     <Compile Include="Models\BookmarkTag.cs" />
     <Compile Include="Models\ModelStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\BookmarkTagAction.cs" />
     <Compile Include="Utility\DataUtility.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -293,6 +296,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
