--- a/BookmarkSharp/BookmarkSharp.DataAccess/BookmarkSharp.DataAccess.csproj
+++ b/BookmarkSharp/BookmarkSharp.DataAccess/BookmarkSharp.DataAccess.csproj
@@ -40,6 +40,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="SimpleBasicAuthentication">
+      <HintPath>..\packages\SimpleBasicAuthenticationModule.0.1\lib\SimpleBasicAuthentication.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
@@ -179,10 +182,18 @@
     <Compile Include="Models\BookmarkTag.cs" />
     <Compile Include="Models\ModelStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestSimpleBasicAuthentication.aspx.cs">
+      <DependentUpon>TestSimpleBasicAuthentication.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TestSimpleBasicAuthentication.aspx.designer.cs">
+      <DependentUpon>TestSimpleBasicAuthentication.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Utility\BookmarkTagAction.cs" />
     <Compile Include="Utility\DataUtility.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\UserCredentials.xml" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -266,6 +277,7 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="TestSimpleBasicAuthentication.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -294,9 +306,14 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <None Include="Views\Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
+    <None Include="Views\Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
