--- a/BookmarkSharp/BookmarkSharp.DataAccess/Web.config
+++ b/BookmarkSharp/BookmarkSharp.DataAccess/Web.config
@@ -9,7 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-   </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-BookmarkSharp.DataAccess-20140713172018;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-BookmarkSharp.DataAccess-20140713172018.mdf" providerName="System.Data.SqlClient" />
+    <add name="BookmarkFolderContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=BookmarkFolderContext-20140713173110; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|BookmarkFolderContext-20140713173110.mdf" providerName="System.Data.SqlClient" />
+    <add name="BookmarkSharpEntityModel" connectionString="metadata=res://*/Models.BookmarkSharpModel.csdl|res://*/Models.BookmarkSharpModel.ssdl|res://*/Models.BookmarkSharpModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql2k513.discountasp.net;initial catalog=SQL2005_378689_brdstudio;persist security info=True;user id=SQL2005_378689_brdstudio_user;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BSConn" connectionString="Data Source=tcp:sql2k513.discountasp.net;Initial Catalog=SQL2005_378689_brdstudio;User ID=SQL2005_378689_brdstudio_user;Password=AYbr549wow;" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
